# gpu_display

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: gpu_monitor.cpp  gpu_monitor.hpp  monitor.hpp
src/amd/: amd_monitor.cpp  amd_monitor.hpp
src/nvidia/: nvidia_monitor.cpp  nvidia_monitor.hpp
